--- a/manuals/2.4.0/3/6_-_Installation_Notes.html
+++ b/manuals/2.4.0/3/6_-_Installation_Notes.html
@@ -129,12 +129,12 @@ var WRInitTime=(new Date()).getTime();
 
 
 <ul>
-<li>Change all /var/www/cobbler in /etc/apache2/conf.d/cobbler.conf to /usr/share/cobbler/webroot/</li>
+<li>Change all <code>/var/www/cobbler</code> in <code>/etc/apache2/conf.d/cobbler.conf</code> to <code>/usr/share/cobbler/webroot/</code></li>
 <li>init script
 
 <ul>
 <li>add Required-Stop line</li>
-<li>path needs to be /usr/local/... or fix the install location
+<li>path needs to be <code>/usr/local/...</code> or fix the install location
 </pre></li>
 </ul>
 </li>
