--- a/manuals/2.4.0/4/2/10_-_ACL_Setup.html
+++ b/manuals/2.4.0/4/2/10_-_ACL_Setup.html
@@ -129,9 +129,9 @@ Options:
 
 <p>The above example gives timmy access to run cobbler commands.</p>
 
-<p>Note that aclsetup does grant access to configure all of /etc/cobbler, /var/www/cobbler, and /var/lib/cobbler, so it is still rather powerful in terms of the access it grants (though somewhat less so than providing root).</p>
+<p>Note that aclsetup does grant access to configure all of <code>/etc/cobbler</code>, <code>/var/www/cobbler</code>, and <code>/var/lib/cobbler</code>, so it is still rather powerful in terms of the access it grants (though somewhat less so than providing root).</p>
 
-<p>A user with acls can, for instance, edit cobbler triggers which are later run by cobblerd (as root).  In this event, cobbler access (either sudo or aclsetup) should not be granted to users you do not trust completely.   This should not be a major problem as in giving them access to configure future aspects of your network (via the provisioning server) they are already being granted fairly broad rights.</p>
+<p>A user with acls can, for instance, edit cobbler triggers which are later run by cobblerd (as root). In this event, cobbler access (either sudo or aclsetup) should not be granted to users you do not trust completely. This should not be a major problem as in giving them access to configure future aspects of your network (via the provisioning server) they are already being granted fairly broad rights.</p>
 
 <p>It is at least nicer than running "sudo" all of the time if you were going to grant a user "no password" sudo access to cobbler.</p>
 
