--- a/manuals/2.4.0/4/2/8_-_Replication.html
+++ b/manuals/2.4.0/4/2/8_-_Replication.html
@@ -140,7 +140,7 @@ Options:
 <h2>Setup</h2>
 
 <p>On each replica-to-be cobbler server, just install cobbler as
-normal, and make sure /etc/cobbler/settings and
+normal, and make sure <code>/etc/cobbler/settings</code> and
 /etc/cobbler/modules.conf are appropriate. Use "cobbler check" to
 spot check your work. Cobbler replicate will not configure these
 files, and you may want different site-specific settings for
@@ -179,7 +179,7 @@ keep an active installation.</p>
 
 <h2>Load Balancing</h2>
 
-<p>Similar to the HA / Disaster Recovery case, consider using a
+<p>Similar to the HA/Disaster Recovery case, consider using a
 <a href="Triggers">CobblerTrigger</a> to notify the other
 server to pull new metadata when commands are issued.</p>
 
