--- a/manuals/2.4.0/4/7_-_Package_Management_and_Mirroring.html
+++ b/manuals/2.4.0/4/7_-_Package_Management_and_Mirroring.html
@@ -186,7 +186,7 @@ want a version of yum-utils at least equal to 1.0.4.</p>
 
 <p>If you want your installed systems to be automatically configured
 to use your install server for updates, go into
-/etc/cobbler/settings and set the following:</p>
+<code>/etc/cobbler/settings</code> and set the following:</p>
 
 <pre><code>yum_post_install_mirror: 1
 </code></pre>
