--- a/manuals/2.4.0/5/17_-_System_Retirement.html
+++ b/manuals/2.4.0/5/17_-_System_Retirement.html
@@ -191,7 +191,7 @@ cobbler profile add --name=DBAN-1.0.7-i386 --distro=DBAN-1.0.7-i386
 
 <p>It should go without saying that, while it might be a mildly fun prank, you shouldn't set this to be your default pxe boot menu choice. You'll most likely get fired and/or beat up by your fellow employees.</p>
 
-<p>If you do set this profile, it will show up as an option in the PXE menus. If this concerns you, set up a syslinux password by editing the templates in /etc/cobbler to ensure no one walks up to a system and blitzes it involuntarily. An option to keep a profile out of the PXE menu is doable if enough people request it or someone wants to submit a patch...</p>
+<p>If you do set this profile, it will show up as an option in the PXE menus. If this concerns you, set up a syslinux password by editing the templates in <code>/etc/cobbler</code> to ensure no one walks up to a system and blitzes it involuntarily. An option to keep a profile out of the PXE menu is doable if enough people request it or someone wants to submit a patch...</p>
 
    </div>
    <div class="span3">
