--- a/manuals/2.4.0/5/3_-_Configuration_Management.html
+++ b/manuals/2.4.0/5/3_-_Configuration_Management.html
@@ -199,7 +199,7 @@ your DNS, which you don't have to be doing).</p>
 <p>For more documentation on Puppet's external nodes feature, see docs.puppetlabs.com</p>
 
 <p>Cobbler provides one, so configure puppet to use
-/usr/bin/cobbler-ext-nodes:</p>
+<code>/usr/bin/cobbler-ext-nodes</code>:</p>
 
 <pre><code>[main]
 external_nodes = /usr/bin/cobbler-ext-nodes
@@ -246,7 +246,7 @@ organized in one place.</p>
 
 <p>What if you have global parameters or classes to add? No problem.
 You can also add more classes by editing the following fields in
-/etc/cobbler/settings:</p>
+<code>/etc/cobbler/settings</code>:</p>
 
 <pre><code># cobbler has a feature that allows for integration with config management
 # systems such as Puppet.  The following parameters work in conjunction with 
@@ -262,9 +262,9 @@ mgmt_parameters:
 
 <p>Attached at puppet_node.py is an alternate external node script
 that fills in the nodes with items from a manifests repository (at
-/etc/puppet/manifests/) and networking information from cobbler. It
+<code>/etc/puppet/manifests/</code>) and networking information from cobbler. It
 is configured like the above from the puppet side, and then looks
-for /etc/puppet/external_node.yaml for cobbler side configuration.
+for <code>/etc/puppet/external_node.yaml</code> for cobbler side configuration.
 The configuration is as follows.</p>
 
 <pre><code>base: /etc/puppet/manifests/nodes
