--- a/manuals/2.4.0/6/2_-_Web_Authentication.html
+++ b/manuals/2.4.0/6/2_-_Web_Authentication.html
@@ -146,7 +146,7 @@ module = authn_passthru
 module = authn_ldap
 </code></pre>
 
-<p>This option authenticates against <a href="LDAP">LDAP</a> using parameters from /etc/cobbler/settings. This is a direct connection to LDAP without relying on Apache.</p>
+<p>This option authenticates against <a href="LDAP">LDAP</a> using parameters from <code>/etc/cobbler/settings</code>. This is a direct connection to LDAP without relying on Apache.</p>
 
 <h2>Spacewalk</h2>
 
