--- a/manuals/2.4.0/8/Xmlrpc.html
+++ b/manuals/2.4.0/8/Xmlrpc.html
@@ -123,7 +123,7 @@ that is to be distributed to the public or customers</li>
 <a href="Security%20Overview">Security</a> and
 ensure both Apache and cobblerd are running on your cobbler server.
 If you are using the authn_spacewalk module, set
-redhat_management_permissive: 1 in /etc/cobbler/settings.</p>
+redhat_management_permissive: 1 in <code>/etc/cobbler/settings</code>.</p>
 
 <h2>About These Examples</h2>
 
@@ -408,7 +408,7 @@ access, we proxy through Apache at
 <h2>Logging</h2>
 
 <p>As a sidenote, Cobbler XMLRPC uses a seperate logfile,
-/var/log/cobbler/cobblerd.log, than the standard CLI operations
+<code>/var/log/cobbler/cobblerd.log</code>, than the standard CLI operations
 (cobbler.log). Remote exceptions are logged here for you to read,
 and can be helpful for debugging.</p>
 
