--- a/manuals/2.4.0/9_-_Troubleshooting.html
+++ b/manuals/2.4.0/9_-_Troubleshooting.html
@@ -211,7 +211,7 @@ internal virbr0/192.168.122.1 only. For ISC dhcpd you can set in
 <pre><code>DHCPDARGS=eth0
 </code></pre>
 
-<p>For dnsmasq you can set in /etc/dnsmasq.conf:</p>
+<p>For dnsmasq you can set in <code>/etc/dnsmasq.conf</code>:</p>
 
 <pre><code>interface=eth0
 except-interface=lo
@@ -382,7 +382,7 @@ internal virbr0/192.168.122.1 only. For ISC dhcpd you can set in
 <pre><code>DHCPDARGS=eth0
 </code></pre>
 
-<p>For dnsmasq you can set in /etc/dnsmasq.conf:</p>
+<p>For dnsmasq you can set in <code>/etc/dnsmasq.conf</code>:</p>
 
 <pre><code>interface=eth0
 except-interface=lo
