--- a/manuals/2.4.0/4/1/3_-_Systems.html
+++ b/manuals/2.4.0/4/1/3_-_Systems.html
@@ -126,7 +126,7 @@ cobbler system report
 
 <p>Note that if provisioning via koan and PXE menus alone, it is not required to create system records in cobbler, though they are useful when system specific customizations are required. One such customization would be defining the MAC address. If there is a specific role inteded for a given machine, system records should be created for it.</p>
 
-<p>System commands have a wider variety of control offered over network details. In order to use these to the fullest possible extent, the kickstart template used by cobbler must contain certain kickstart snippets (sections of code specifically written for Cobbler to make these values become reality). Compare your kickstart templates with the stock ones in /var/lib/cobbler/kickstarts if you have upgraded, to make sure you can take advantage of all options to their fullest potential. If you are a new cobbler user, base your kickstarts off of these templates. Non-kickstart based distributions, while supported by Cobbler, may not be able to use all of these features.</p>
+<p>System commands have a wider variety of control offered over network details. In order to use these to the fullest possible extent, the kickstart template used by cobbler must contain certain kickstart snippets (sections of code specifically written for Cobbler to make these values become reality). Compare your kickstart templates with the stock ones in <code>/var/lib/cobbler/kickstarts</code> if you have upgraded, to make sure you can take advantage of all options to their fullest potential. If you are a new cobbler user, base your kickstarts off of these templates. Non-kickstart based distributions, while supported by Cobbler, may not be able to use all of these features.</p>
 
 <p><strong>Example:</strong></p>
 
@@ -183,11 +183,11 @@ cobbler system report
 
 <h4>--gateway</h4>
 
-<p>Sets the default gateway, which in Redhat-based systems is typically in /etc/sysconfig/network. Per-interface gateways are not supported at this time. This option will be ignored unless --static=1 is also set on the interface.</p>
+<p>Sets the default gateway, which in Redhat-based systems is typically in <code>/etc/sysconfig/network</code>. Per-interface gateways are not supported at this time. This option will be ignored unless --static=1 is also set on the interface.</p>
 
 <h4>--hostname</h4>
 
-<p>This field corresponds to the hostname set in a systems /etc/sysconfig/network file. This has no bearing on DNS, even when manage_dns is enabled. Use --dns-name instead for that feature, which is a per-interface setting.</p>
+<p>This field corresponds to the hostname set in a systems <code>/etc/sysconfig/network</code> file. This has no bearing on DNS, even when manage_dns is enabled. Use --dns-name instead for that feature, which is a per-interface setting.</p>
 
 <h4>--in-place</h4>
 
@@ -249,11 +249,11 @@ cobbler system report
 
 <h4>--netboot-enabled</h4>
 
-<p>If set false, the system will be provisionable through koan but not through standard PXE. This will allow the system to fall back to default PXE boot behavior without deleting the cobbler system object. The default value allows PXE. Cobbler contains a PXE boot loop prevention feature (pxe_just_once, can be enabled in /etc/cobbler/settings) that can automatically trip off this value after a system gets done installing. This can prevent installs from appearing in an endless loop when the system is set to PXE first in the BIOS order.</p>
+<p>If set false, the system will be provisionable through koan but not through standard PXE. This will allow the system to fall back to default PXE boot behavior without deleting the cobbler system object. The default value allows PXE. Cobbler contains a PXE boot loop prevention feature (pxe_just_once, can be enabled in <code>/etc/cobbler/settings</code>) that can automatically trip off this value after a system gets done installing. This can prevent installs from appearing in an endless loop when the system is set to PXE first in the BIOS order.</p>
 
 <h4>--owners</h4>
 
-<p>The value for --owners is a space seperated list of users and groups as specified in /etc/cobbler/users.conf.</p>
+<p>The value for --owners is a space seperated list of users and groups as specified in <code>/etc/cobbler/users.conf</code>.</p>
 
 <h4>--power-address, --power-type, --power-user, --power-password, --power-id</h4>
 
@@ -388,7 +388,7 @@ cobbler system report
 </div>
 
 
-<p>This is a per-interface parameter. If you have multiple interfaces, it may be different for each interface, for example, assume a DMZ / dual-homed setup.</p>
+<p>This is a per-interface parameter. If you have multiple interfaces, it may be different for each interface, for example, assume a DMZ/dual-homed setup.</p>
 
 <h4>--interface-type and --interface-master</h4>
 
@@ -455,7 +455,7 @@ cobbler system report
 
 <p>MAC addresses have the format AA:BB:CC:DD:EE:FF. It’s higly recommended to register your MAC-addresses in Cobbler if you’re using static adressing with multiple interfaces, or if you are using any of the advanced networking features like bonding, bridges or VLANs.</p>
 
-<p>Cobbler does contain a feature (enabled in /etc/cobbler/settings) that can automatically add new system records when it finds profiles being provisioned on hardware it has seen before. This may help if you do not have a report of all the MAC addresses in your datacenter/lab configuration.</p>
+<p>Cobbler does contain a feature (enabled in <code>/etc/cobbler/settings</code>) that can automatically add new system records when it finds profiles being provisioned on hardware it has seen before. This may help if you do not have a report of all the MAC addresses in your datacenter/lab configuration.</p>
 
 <h4>--mtu</h4>
 
