--- a/manuals/2.4.0/5/5/3_-_Extending_Cheetah.html
+++ b/manuals/2.4.0/5/5/3_-_Extending_Cheetah.html
@@ -111,7 +111,7 @@ you are new to Cheetah, see the documentation at
 and pay special attention to the #def directive.</p>
 
 <p>To create new functions, add your Cheetah code to
-/etc/cobbler/cheetah_macros. This file will be sourced in all
+<code>/etc/cobbler/cheetah_macros</code>. This file will be sourced in all
 Cheetah templates automatically, making it possible to write custom
 functions and use them from this file.</p>
 
