--- a/manuals/2.4.0/Appendix/B_-_S390_Support.html
+++ b/manuals/2.4.0/Appendix/B_-_S390_Support.html
@@ -112,7 +112,7 @@ var WRInitTime=(new Date()).getTime();
 
 <p>We will assume static networking is used for System z guests.</p>
 
-<p>After the Cobbler server is running, and you have imported at least one s390x install tree, you can customize the default kickstart template.  Cobbler provides a sample kickstart template that you can start with called /var/lib/cobbler/kickstarts/sample.ks.  You will want to copy this sample, and modify it by adding the following snippet in %post:</p>
+<p>After the Cobbler server is running, and you have imported at least one s390x install tree, you can customize the default kickstart template.  Cobbler provides a sample kickstart template that you can start with called <code>/var/lib/cobbler/kickstarts/sample.ks</code>.  You will want to copy this sample, and modify it by adding the following snippet in %post:</p>
 
 <pre><code>$SNIPPET('post_s390_reboot')
 </code></pre>
@@ -181,7 +181,7 @@ DASD=100-101,200 GATEWAY=10.10.10.254 NETWORK=10.10.10.0"
 </ol>
 
 
-<p>When netboot is enabled on the cobbler server, it places a file called s_''systemname'' (where ''systemname'' = z/VM user ID) into /var/lib/tftpboot/s390x/ which contains the following lines:</p>
+<p>When netboot is enabled on the cobbler server, it places a file called s_''systemname'' (where ''systemname'' = z/VM user ID) into <code>/var/lib/tftpboot/s390x/</code> which contains the following lines:</p>
 
 <pre><code>/images/RHEL-5-Server-U3-s390x/kernel.img
 /images/RHEL-5-Server-U3-s390x/initrd.img
